add contact form

--- a/w3.css
+++ b/w3.css
@@ -106,8 +106,9 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .w3-display-position{position:absolute}
 .w3-circle{border-radius:50%}
 .w3-round-small{border-radius:2px}.w3-round,.w3-round-medium{border-radius:4px}.w3-round-large{border-radius:8px}.w3-round-xlarge{border-radius:16px}.w3-round-xxlarge{border-radius:32px}
+.w3-row{padding: 0 30px}
 .w3-row-padding,.w3-row-padding>.w3-half,.w3-row-padding>.w3-third,.w3-row-padding>.w3-twothird,.w3-row-padding>.w3-threequarter,.w3-row-padding>.w3-quarter,.w3-row-padding>.w3-col{padding:0 8px}
-.w3-container,.w3-panel{padding:0.01em 16px}.w3-panel{margin-top:16px;margin-bottom:16px}
+.w3-container,.w3-panel{padding:0.05em 16px}.w3-panel{margin-top:16px;margin-bottom:16px}
 .w3-code,.w3-codespan{font-family:Consolas,"courier new";font-size:16px}
 .w3-code{width:auto;background-color:#fff;padding:8px 12px;border-left:4px solid #4CAF50;word-wrap:break-word}
 .w3-codespan{color:crimson;background-color:#f1f1f1;padding-left:4px;padding-right:4px;font-size:110%}
@@ -280,17 +281,17 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 }
 
 p > a, span > a {
-	color: #4CAF50!important;
+	color: #4CAF50;
 }
 
 .big-icon {
 	font-size: 150%;
 	display: inline-block;
+	padding-left: 0;
 }
 
 .fa-ul {
  list-style-type:none;
- margin-left:2.5em;
  padding-left:0;
 
 }
@@ -304,10 +305,36 @@ p > a, span > a {
 	content: " ";
 }
 
-/*
-.fa-li {
- left:-2em;
- position:absolute;
- width:2em;
- line-height:inherit;
-}*/
+.container {
+  max-width: 600px;
+  margin: 0 0;
+  text-align: left;
+}
+
+input[type="text"], input[type="email"], textarea {
+  width: 100%;
+  padding: 2% 2%;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+input[type="text"]:focus, input[type="email"]:focus, textarea:focus {
+  outline: none;
+  border: 2px solid #459c48;
+}
+
+input[type="submit"] {
+  background-color: #459c48;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type="submit"]:hover {
+  background-color: #357a38;
+}
