--- a/w3.css
+++ b/w3.css
@@ -2,7 +2,7 @@
 html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}
 /* Extract from normalize.css by Nicolas Gallagher and Jonathan Neal git.io/normalize */
 html{-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}
-article,aside,details,figcaption,figure,footer,header,main,menu,nav,section{display:block}summary{display:list-item}
+article,aside,details,figcaption,figure,header,main,menu,nav,section{display:block}summary{display:list-item}
 audio,canvas,progress,video{display:inline-block}progress{vertical-align:baseline}
 audio:not([controls]){display:none;height:0}[hidden],template{display:none}
 a{background-color:transparent}a:active,a:hover{outline-width:0}
@@ -257,8 +257,22 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 }
 
 #myFooter {
-	text-align: right;
+	margin-top: auto;
 }
+
+.footer-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center; /* Center content vertically */
+    width: 100%; /* Ensure the content spans the entire width of the footer */
+    white-space: nowrap; /* Prevent text wrapping */
+}
+
+.footer-content span {
+    display: flex; /* Enable flex layout for the anchor element */
+    align-items: center; /* Center content vertically */
+}
+
 
 .light {
 	background-color: #fff;
