--- a/w3.css
+++ b/w3.css
@@ -252,6 +252,7 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
   padding: 10%;
   vertical-align: middle;
   max-width: 90%;
+  overflow: hidden;
   text-align: center;
 }
 
